// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiScenarioGenerator generate api scenario from data plane recording - appconfiguration 1`] = `
Object {
  "scenarios": Array [
    Object {
      "scenario": "AddExistingSetting",
      "steps": Array [
        Object {
          "operationId": "PutKeyValue",
          "responses": undefined,
          "step": "PutKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3Nzgy",
          },
          "responses": Object {
            "412": Object {},
          },
          "step": "PutKeyValue_1",
          "variables": undefined,
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3Nzgy",
          },
          "responses": undefined,
          "step": "DeleteKeyValue",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "If-None-Match": Object {
          "type": "string",
          "value": "*",
        },
        "endpoint": Object {
          "type": "string",
          "value": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
        },
        "entity": Object {
          "type": "object",
          "value": Object {
            "content_type": "test_content_type",
            "tags": Object {
              "tag1": "value1",
              "tag2": "value2",
            },
            "value": "test_value",
          },
        },
        "key": Object {
          "type": "string",
          "value": "key-1954625347",
        },
        "label": Object {
          "type": "string",
          "value": "test_label",
        },
      },
    },
    Object {
      "scenario": "CanAddAndUpdateFeatureFlag",
      "steps": Array [
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "If-None-Match": "*",
          },
          "responses": undefined,
          "step": "PutKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3ODE2",
          },
          "responses": undefined,
          "step": "PutKeyValue_1",
          "variables": Object {
            "entity": Object {
              "patches": Array [
                Object {
                  "replace": "/value",
                  "value": "{\\"id\\":\\"feature 1306740339\\",\\"description\\":\\"Feature description\\",\\"display_name\\":\\"Feature display name\\",\\"enabled\\":false,\\"conditions\\":{\\"client_filters\\":[{\\"name\\":\\"FilterA\\",\\"parameters\\":{}},{\\"name\\":\\"Microsoft.TimeWindow\\",\\"parameters\\":{\\"Start\\":\\"Wed, 01 May 2019 13:59:59 GMT\\",\\"End\\":\\"Mon, 01 July 2019 00:00:00 GMT\\"}}]}}",
                },
                Object {
                  "add": "/etag",
                  "value": "Xw8kFsc-oaEk_nXNPXOWkAaCE6de_zAgyLgPiI0k-AY",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3ODE4",
          },
          "responses": undefined,
          "step": "DeleteKeyValue",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "endpoint": Object {
          "type": "string",
          "value": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
        },
        "entity": Object {
          "type": "object",
          "value": Object {
            "content_type": "application/vnd.microsoft.appconfig.ff+json;charset=utf-8",
            "tags": Object {},
            "value": "{\\"id\\":\\"feature 1306740339\\",\\"description\\":\\"Feature description\\",\\"display_name\\":\\"Feature display name\\",\\"enabled\\":true,\\"conditions\\":{\\"client_filters\\":[{\\"name\\":\\"FilterA\\",\\"parameters\\":{}},{\\"name\\":\\"Microsoft.TimeWindow\\",\\"parameters\\":{\\"Start\\":\\"Wed, 01 May 2019 13:59:59 GMT\\",\\"End\\":\\"Mon, 01 July 2019 00:00:00 GMT\\"}}]}}",
          },
        },
        "key": Object {
          "type": "string",
          "value": ".appconfig.featureflag/feature 1306740339",
        },
      },
    },
    Object {
      "scenario": "ClearReadOnlySettingNotFound",
      "steps": Array [
        Object {
          "operationId": "PutLock",
          "parameters": Object {
            "endpoint": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
            "key": "key-199017029",
          },
          "responses": Object {
            "404": Object {},
          },
          "step": "PutLock",
          "variables": undefined,
        },
      ],
      "variables": undefined,
    },
    Object {
      "scenario": "ConfigurationClient_SetReadOnly_OnlyIfUnchanged_Modified_False_",
      "steps": Array [
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "If-None-Match": "*",
          },
          "responses": undefined,
          "step": "PutKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3OTY0",
          },
          "responses": undefined,
          "step": "PutKeyValue_1",
          "variables": Object {
            "entity": Object {
              "patches": Array [
                Object {
                  "replace": "/value",
                  "value": "new_value",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "DeleteLock",
          "parameters": Object {
            "If-Match": "\\"LgZO1vXg1qh1tBjyRitcoYSFTRUkXB8XdxsHMM1AzrI\\"",
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3OTY1",
          },
          "responses": Object {
            "412": Object {},
          },
          "step": "DeleteLock",
          "variables": undefined,
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3OTY1",
          },
          "responses": undefined,
          "step": "DeleteKeyValue",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "endpoint": Object {
          "type": "string",
          "value": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
        },
        "entity": Object {
          "type": "object",
          "value": Object {
            "content_type": "test_content_type",
            "tags": Object {
              "tag1": "value1",
              "tag2": "value2",
            },
            "value": "test_value",
          },
        },
        "key": Object {
          "type": "string",
          "value": "key-2141872649",
        },
        "label": Object {
          "type": "string",
          "value": "test_label",
        },
      },
    },
    Object {
      "scenario": "DeleteIfUnchangedSettingModified",
      "steps": Array [
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "If-None-Match": "*",
          },
          "responses": undefined,
          "step": "PutKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3ODMw",
          },
          "responses": undefined,
          "step": "PutKeyValue_1",
          "variables": Object {
            "entity": Object {
              "patches": Array [
                Object {
                  "replace": "/value",
                  "value": "new_value",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "If-Match": "\\"kcfjab4MYd1eDj2XrZ6aCxYLdFVmVmY5eKoLO5VmG70\\"",
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3ODMx",
          },
          "responses": Object {
            "412": Object {},
          },
          "step": "DeleteKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3ODMx",
          },
          "responses": undefined,
          "step": "DeleteKeyValue_1",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "endpoint": Object {
          "type": "string",
          "value": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
        },
        "entity": Object {
          "type": "object",
          "value": Object {
            "content_type": "test_content_type",
            "tags": Object {
              "tag1": "value1",
              "tag2": "value2",
            },
            "value": "test_value",
          },
        },
        "key": Object {
          "type": "string",
          "value": "key-1505928816",
        },
        "label": Object {
          "type": "string",
          "value": "test_label",
        },
      },
    },
    Object {
      "scenario": "GetBatchSettingAny",
      "steps": Array [
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "entity": Object {
              "content_type": "test_content_type",
              "tags": Object {
                "tag1": "value1",
                "tag2": "value2",
              },
              "value": "test_value",
            },
            "key": "key-2094909004",
            "label": "test_label",
          },
          "responses": undefined,
          "step": "PutKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "GetKeyValues",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjE2MDIy",
          },
          "responses": undefined,
          "step": "GetKeyValues",
          "variables": undefined,
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjE2MDIy",
            "key": "key-2094909004",
            "label": "test_label",
          },
          "responses": undefined,
          "step": "DeleteKeyValue",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "endpoint": Object {
          "type": "string",
          "value": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
        },
      },
    },
    Object {
      "scenario": "GetBatchSettingWithFields",
      "steps": Array [
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "If-None-Match": "*",
            "entity": Object {
              "content_type": null,
              "tags": Object {},
              "value": "my_value",
            },
            "label": "my_label",
          },
          "responses": undefined,
          "step": "PutKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "GetKeyValues",
          "parameters": Object {
            "$Select": "key, label, etag",
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3ODg4",
          },
          "responses": undefined,
          "step": "GetKeyValues",
          "variables": undefined,
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3ODg4",
            "label": "my_label",
          },
          "responses": undefined,
          "step": "DeleteKeyValue",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "endpoint": Object {
          "type": "string",
          "value": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
        },
        "key": Object {
          "type": "string",
          "value": "keyFields-194380201",
        },
      },
    },
    Object {
      "scenario": "GetSettingSpecialCharacters",
      "steps": Array [
        Object {
          "operationId": "PutKeyValue",
          "parameters": Object {
            "entity": Object {
              "content_type": null,
              "tags": Object {},
              "value": "value-~\`!@#$^&()_+=[]{}|;\\"'<>./-",
            },
          },
          "responses": undefined,
          "step": "PutKeyValue",
          "variables": undefined,
        },
        Object {
          "operationId": "DeleteKeyValue",
          "parameters": Object {
            "Sync-Token": "zAJw6V16=MjoxNyM5MjA3OTEy",
          },
          "responses": undefined,
          "step": "DeleteKeyValue",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "endpoint": Object {
          "type": "string",
          "value": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
        },
        "key": Object {
          "type": "string",
          "value": "~\`!@#$^&()_+=[]{}|;\\"'<>./--996999594",
        },
      },
    },
    Object {
      "scenario": "SetReadOnlySettingNotFound",
      "steps": Array [
        Object {
          "operationId": "PutLock",
          "parameters": Object {
            "endpoint": "https://t-dnnwaokochaappconfig-azconfig-net.azconfig.io",
            "key": "key-1514776256",
          },
          "responses": Object {
            "404": Object {},
          },
          "step": "PutLock",
          "variables": undefined,
        },
      ],
      "variables": undefined,
    },
  ],
  "scope": "None",
}
`;

exports[`ApiScenarioGenerator generate api scenario from recording - storage 1`] = `
Object {
  "scenarios": Array [
    Object {
      "scenario": "AddRemoveTag",
      "steps": Array [
        Object {
          "operationId": "Subscriptions_Get",
          "responses": undefined,
          "step": "Subscriptions_Get",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "parameters": Object {
            "accountName": Object {
              "name": "$(accountName)",
              "type": "Microsoft.Storage/storageAccounts",
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "responses": undefined,
          "step": "StorageAccounts_Create",
          "variables": undefined,
        },
        Object {
          "operationId": "Tags_GetAtScope",
          "responses": undefined,
          "step": "Tags_GetAtScope",
          "variables": undefined,
        },
        Object {
          "operationId": "Tags_CreateOrUpdateAtScope",
          "parameters": Object {
            "parameters": Object {
              "properties": Object {
                "tags": Object {
                  "key": "value",
                  "key1": "value1",
                  "key2": "value2",
                },
              },
            },
          },
          "responses": undefined,
          "step": "Tags_CreateOrUpdateAtScope",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_GetProperties",
          "responses": undefined,
          "step": "StorageAccounts_GetProperties",
          "variables": undefined,
        },
        Object {
          "operationId": "Tags_CreateOrUpdateAtScope",
          "parameters": Object {
            "parameters": Object {
              "properties": Object {
                "tags": Object {
                  "key1": "value1",
                  "key2": "value2",
                },
              },
            },
          },
          "responses": undefined,
          "step": "Tags_CreateOrUpdateAtScope_1",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_GetProperties",
          "responses": undefined,
          "step": "StorageAccounts_GetProperties_1",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_ListByResourceGroup",
          "responses": undefined,
          "step": "StorageAccounts_ListByResourceGroup",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "responses": undefined,
          "step": "StorageAccounts_Delete",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "accountName": Object {
          "type": "string",
          "value": "teststoragemgmt9233",
        },
        "parameters": Object {
          "type": "object",
          "value": Object {
            "kind": "Storage",
            "location": "$(location)",
            "properties": Object {},
            "sku": Object {
              "name": "Standard_GRS",
            },
            "tags": Object {
              "key1": "value1",
              "key2": "value2",
            },
          },
        },
        "scope": Object {
          "type": "string",
          "value": "subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/teststorageRG-8814/providers/Microsoft.Storage/storageAccounts/$(accountName)",
        },
      },
    },
    Object {
      "scenario": "CreateStandardAccount",
      "steps": Array [
        Object {
          "operationId": "Subscriptions_Get",
          "responses": undefined,
          "step": "Subscriptions_Get",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "parameters": Object {
            "accountName": "$(accountName1)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Create",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability_1",
          "variables": Object {
            "accountName": Object {
              "patches": Array [
                Object {
                  "replace": "/name",
                  "value": "$(accountName2)",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "parameters": Object {
            "accountName": "$(accountName2)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Create_1",
          "variables": Object {
            "parameters": Object {
              "patches": Array [
                Object {
                  "replace": "/sku/name",
                  "value": "Standard_GRS",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability_2",
          "variables": Object {
            "accountName": Object {
              "patches": Array [
                Object {
                  "replace": "/name",
                  "value": "$(accountName3)",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "parameters": Object {
            "accountName": "$(accountName3)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Create_2",
          "variables": Object {
            "parameters": Object {
              "patches": Array [
                Object {
                  "replace": "/sku/name",
                  "value": "Standard_RAGRS",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability_3",
          "variables": Object {
            "accountName": Object {
              "patches": Array [
                Object {
                  "replace": "/name",
                  "value": "$(accountName4)",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "parameters": Object {
            "accountName": "$(accountName4)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Create_3",
          "variables": Object {
            "parameters": Object {
              "patches": Array [
                Object {
                  "replace": "/sku/name",
                  "value": "Standard_ZRS",
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_ListByResourceGroup",
          "responses": undefined,
          "step": "StorageAccounts_ListByResourceGroup",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "parameters": Object {
            "accountName": "$(accountName1)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Delete",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "parameters": Object {
            "accountName": "$(accountName4)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Delete_1",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "parameters": Object {
            "accountName": "$(accountName3)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Delete_2",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "parameters": Object {
            "accountName": "$(accountName2)",
          },
          "responses": undefined,
          "step": "StorageAccounts_Delete_3",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "accountName": Object {
          "type": "object",
          "value": Object {
            "name": "teststoragemgmt3148",
            "type": "Microsoft.Storage/storageAccounts",
          },
        },
        "accountName1": Object {
          "type": "string",
          "value": "teststoragemgmt3148",
        },
        "accountName2": Object {
          "type": "string",
          "value": "teststoragemgmt9231",
        },
        "accountName3": Object {
          "type": "string",
          "value": "teststoragemgmt5066",
        },
        "accountName4": Object {
          "type": "string",
          "value": "teststoragemgmt405",
        },
        "parameters": Object {
          "type": "object",
          "value": Object {
            "kind": "Storage",
            "location": "$(location)",
            "properties": Object {},
            "sku": Object {
              "name": "Standard_LRS",
            },
            "tags": Object {
              "key1": "value1",
              "key2": "value2",
            },
          },
        },
      },
    },
    Object {
      "scenario": "CreateUpdateGetDeleteBlobInventoryPolicy",
      "steps": Array [
        Object {
          "operationId": "Subscriptions_Get",
          "responses": undefined,
          "step": "Subscriptions_Get",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "parameters": Object {
            "accountName": Object {
              "name": "$(accountName)",
              "type": "Microsoft.Storage/storageAccounts",
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "parameters": Object {
            "parameters": Object {
              "kind": "StorageV2",
              "location": "$(location)",
              "properties": Object {},
              "sku": Object {
                "name": "Standard_GRS",
              },
              "tags": Object {
                "key1": "value1",
                "key2": "value2",
              },
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_Create",
          "variables": undefined,
        },
        Object {
          "operationId": "BlobServices_GetServiceProperties",
          "parameters": Object {
            "BlobServicesName": "default",
          },
          "responses": undefined,
          "step": "BlobServices_GetServiceProperties",
          "variables": undefined,
        },
        Object {
          "operationId": "BlobContainers_Create",
          "parameters": Object {
            "blobContainer": Object {
              "properties": Object {},
            },
            "containerName": "testblob7262",
          },
          "responses": undefined,
          "step": "BlobContainers_Create",
          "variables": undefined,
        },
        Object {
          "operationId": "BlobInventoryPolicies_CreateOrUpdate",
          "parameters": Object {
            "blobInventoryPolicyName": "default",
          },
          "responses": undefined,
          "step": "BlobInventoryPolicies_CreateOrUpdate",
          "variables": undefined,
        },
        Object {
          "operationId": "BlobInventoryPolicies_CreateOrUpdate",
          "parameters": Object {
            "blobInventoryPolicyName": "default",
          },
          "responses": undefined,
          "step": "BlobInventoryPolicies_CreateOrUpdate_1",
          "variables": Object {
            "properties": Object {
              "patches": Array [
                Object {
                  "add": "/properties/policy/rules/2",
                  "value": Object {
                    "definition": Object {
                      "format": "Parquet",
                      "objectType": "Container",
                      "schedule": "Weekly",
                      "schemaFields": Array [
                        "Name",
                      ],
                    },
                    "destination": "testblob7262",
                    "enabled": true,
                    "name": "rule3",
                  },
                },
              ],
              "type": "object",
              "value": undefined,
            },
          },
        },
        Object {
          "operationId": "BlobInventoryPolicies_Delete",
          "parameters": Object {
            "blobInventoryPolicyName": "default",
          },
          "responses": undefined,
          "step": "BlobInventoryPolicies_Delete",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_ListByResourceGroup",
          "responses": undefined,
          "step": "StorageAccounts_ListByResourceGroup",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "responses": undefined,
          "step": "StorageAccounts_Delete",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "accountName": Object {
          "type": "string",
          "value": "teststoragemgmt1421",
        },
        "properties": Object {
          "type": "object",
          "value": Object {
            "properties": Object {
              "policy": Object {
                "enabled": true,
                "rules": Array [
                  Object {
                    "definition": Object {
                      "filters": Object {
                        "blobTypes": Array [
                          "blockBlob",
                        ],
                        "includeBlobVersions": true,
                        "includeSnapshots": true,
                        "prefixMatch": Array [
                          "prefix1",
                          "prefix2",
                        ],
                      },
                      "format": "Csv",
                      "objectType": "Blob",
                      "schedule": "Weekly",
                      "schemaFields": Array [
                        "Name",
                        "Creation-Time",
                        "Last-Modified",
                        "Content-Length",
                        "Content-MD5",
                        "BlobType",
                        "AccessTier",
                        "AccessTierChangeTime",
                        "Snapshot",
                        "VersionId",
                        "IsCurrentVersion",
                        "Metadata",
                        "LastAccessTime",
                      ],
                    },
                    "destination": "testblob7262",
                    "enabled": true,
                    "name": "rule1",
                  },
                  Object {
                    "definition": Object {
                      "format": "Csv",
                      "objectType": "Container",
                      "schedule": "Daily",
                      "schemaFields": Array [
                        "Name",
                        "Last-Modified",
                        "Metadata",
                        "LeaseStatus",
                        "LeaseState",
                        "LeaseDuration",
                        "PublicAccess",
                        "HasImmutabilityPolicy",
                        "HasLegalHold",
                      ],
                    },
                    "destination": "testblob7262",
                    "enabled": true,
                    "name": "rule2",
                  },
                ],
                "type": "Inventory",
              },
            },
          },
        },
      },
    },
    Object {
      "scenario": "SetGetDeleteManagementPolicy",
      "steps": Array [
        Object {
          "operationId": "Subscriptions_Get",
          "responses": undefined,
          "step": "Subscriptions_Get",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "parameters": Object {
            "accountName": Object {
              "name": "$(accountName)",
              "type": "Microsoft.Storage/storageAccounts",
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "responses": undefined,
          "step": "StorageAccounts_Create",
          "variables": undefined,
        },
        Object {
          "operationId": "BlobServices_GetServiceProperties",
          "parameters": Object {
            "BlobServicesName": "default",
          },
          "responses": undefined,
          "step": "BlobServices_GetServiceProperties",
          "variables": undefined,
        },
        Object {
          "operationId": "BlobServices_SetServiceProperties",
          "parameters": Object {
            "BlobServicesName": "default",
            "parameters": Object {
              "properties": Object {
                "cors": Object {
                  "corsRules": Array [],
                },
                "deleteRetentionPolicy": Object {
                  "enabled": false,
                },
                "lastAccessTimeTrackingPolicy": Object {
                  "enable": true,
                },
              },
            },
          },
          "responses": undefined,
          "step": "BlobServices_SetServiceProperties",
          "variables": undefined,
        },
        Object {
          "operationId": "ManagementPolicies_CreateOrUpdate",
          "parameters": Object {
            "managementPolicyName": "default",
            "properties": Object {
              "properties": Object {
                "policy": Object {
                  "rules": Array [
                    Object {
                      "definition": Object {
                        "actions": Object {
                          "baseBlob": Object {
                            "delete": Object {
                              "daysAfterModificationGreaterThan": 1000,
                            },
                          },
                        },
                        "filters": Object {
                          "blobTypes": Array [
                            "blockBlob",
                            "appendBlob",
                          ],
                        },
                      },
                      "name": "rule1",
                      "type": "Lifecycle",
                    },
                    Object {
                      "definition": Object {
                        "actions": Object {
                          "baseBlob": Object {
                            "delete": Object {
                              "daysAfterModificationGreaterThan": 1000,
                            },
                          },
                        },
                        "filters": Object {
                          "blobTypes": Array [
                            "appendBlob",
                          ],
                        },
                      },
                      "name": "rule2",
                      "type": "Lifecycle",
                    },
                    Object {
                      "definition": Object {
                        "actions": Object {
                          "baseBlob": Object {
                            "delete": Object {
                              "daysAfterModificationGreaterThan": 1000,
                            },
                          },
                        },
                        "filters": Object {
                          "blobTypes": Array [
                            "blockBlob",
                          ],
                        },
                      },
                      "name": "rule3",
                      "type": "Lifecycle",
                    },
                  ],
                },
              },
            },
          },
          "responses": undefined,
          "step": "ManagementPolicies_CreateOrUpdate",
          "variables": undefined,
        },
        Object {
          "operationId": "ManagementPolicies_Delete",
          "parameters": Object {
            "managementPolicyName": "default",
          },
          "responses": undefined,
          "step": "ManagementPolicies_Delete",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_ListByResourceGroup",
          "responses": undefined,
          "step": "StorageAccounts_ListByResourceGroup",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "responses": undefined,
          "step": "StorageAccounts_Delete",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "accountName": Object {
          "type": "string",
          "value": "teststoragemgmt7320",
        },
        "parameters": Object {
          "type": "object",
          "value": Object {
            "kind": "StorageV2",
            "location": "$(location)",
            "properties": Object {},
            "sku": Object {
              "name": "Standard_GRS",
            },
            "tags": Object {
              "key1": "value1",
              "key2": "value2",
            },
          },
        },
      },
    },
    Object {
      "scenario": "UpdateStorageAccount",
      "steps": Array [
        Object {
          "operationId": "Subscriptions_Get",
          "responses": undefined,
          "step": "Subscriptions_Get",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "parameters": Object {
            "accountName": Object {
              "name": "$(accountName)",
              "type": "Microsoft.Storage/storageAccounts",
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_CheckNameAvailability",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "responses": undefined,
          "step": "StorageAccounts_Create",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Update",
          "parameters": Object {
            "parameters": Object {
              "properties": Object {},
              "sku": Object {
                "name": "Standard_LRS",
              },
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_Update",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Update",
          "parameters": Object {
            "parameters": Object {
              "properties": Object {},
              "sku": Object {
                "name": "Standard_LRS",
              },
              "tags": Object {
                "key3": "value3",
                "key4": "value4",
                "key5": "value5",
              },
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_Update_1",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Update",
          "parameters": Object {
            "parameters": Object {
              "properties": Object {
                "encryption": Object {
                  "keySource": "Microsoft.Storage",
                  "services": Object {
                    "blob": Object {
                      "enabled": true,
                    },
                    "file": Object {
                      "enabled": true,
                    },
                  },
                },
              },
              "sku": Object {
                "name": "Standard_LRS",
              },
              "tags": Object {
                "key3": "value3",
                "key4": "value4",
                "key5": "value5",
              },
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_Update_2",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Update",
          "parameters": Object {
            "parameters": Object {
              "properties": Object {
                "supportsHttpsTrafficOnly": false,
              },
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_Update_3",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Update",
          "parameters": Object {
            "parameters": Object {
              "properties": Object {
                "supportsHttpsTrafficOnly": true,
              },
            },
          },
          "responses": undefined,
          "step": "StorageAccounts_Update_4",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_ListByResourceGroup",
          "responses": undefined,
          "step": "StorageAccounts_ListByResourceGroup",
          "variables": undefined,
        },
        Object {
          "operationId": "StorageAccounts_Delete",
          "responses": undefined,
          "step": "StorageAccounts_Delete",
          "variables": undefined,
        },
      ],
      "variables": Object {
        "accountName": Object {
          "type": "string",
          "value": "teststoragemgmt7986",
        },
        "parameters": Object {
          "type": "object",
          "value": Object {
            "kind": "Storage",
            "location": "$(location)",
            "properties": Object {},
            "sku": Object {
              "name": "Standard_GRS",
            },
            "tags": Object {
              "key1": "value1",
              "key2": "value2",
            },
          },
        },
      },
    },
  ],
  "scope": "ResourceGroup",
}
`;

exports[`ApiScenarioGenerator generate api scenario from swagger - storage 1`] = `
Object {
  "scenarios": Array [
    Object {
      "scenario": "GeneratedScenario",
      "steps": Array [
        Object {
          "operationId": "StorageAccounts_CheckNameAvailability",
          "variables": Object {
            "accountName": Object {
              "type": "object",
              "value": Object {
                "name": "test",
                "type": "Microsoft.Storage/storageAccounts",
              },
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_Create",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {
                "kind": "Storage",
                "location": "$(location)",
                "sku": Object {
                  "name": "Standard_LRS",
                },
              },
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_List",
        },
        Object {
          "operationId": "StorageAccounts_ListByResourceGroup",
        },
        Object {
          "operationId": "StorageAccounts_GetProperties",
        },
        Object {
          "operationId": "StorageAccounts_Update",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_RestoreBlobRanges",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {
                "blobRanges": Array [],
                "timeToRestore": "test",
              },
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_RevokeUserDelegationKeys",
        },
        Object {
          "operationId": "StorageAccounts_AbortHierarchicalNamespaceMigration",
        },
        Object {
          "operationId": "StorageAccounts_ListServiceSAS",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {
                "canonicalizedResource": "test",
              },
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_ListKeys",
        },
        Object {
          "operationId": "StorageAccounts_RegenerateKey",
          "variables": Object {
            "regenerateKey": Object {
              "type": "object",
              "value": Object {
                "keyName": "test",
              },
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_Failover",
        },
        Object {
          "operationId": "StorageAccounts_ListAccountSAS",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {
                "signedExpiry": "test",
                "signedPermission": "r",
                "signedResourceTypes": "s",
                "signedServices": "b",
              },
            },
          },
        },
        Object {
          "operationId": "StorageAccounts_HierarchicalNamespaceMigration",
          "variables": Object {
            "requestType": "test",
          },
        },
        Object {
          "operationId": "BlobContainers_Create",
        },
        Object {
          "operationId": "BlobContainers_List",
        },
        Object {
          "operationId": "BlobContainers_Get",
        },
        Object {
          "operationId": "BlobContainers_Update",
        },
        Object {
          "operationId": "BlobContainers_LockImmutabilityPolicy",
        },
        Object {
          "operationId": "BlobContainers_ObjectLevelWorm",
        },
        Object {
          "operationId": "BlobContainers_Lease",
        },
        Object {
          "operationId": "BlobContainers_ClearLegalHold",
        },
        Object {
          "operationId": "BlobContainers_ExtendImmutabilityPolicy",
        },
        Object {
          "operationId": "BlobContainers_SetLegalHold",
        },
        Object {
          "operationId": "FileShares_Create",
        },
        Object {
          "operationId": "FileShares_List",
        },
        Object {
          "operationId": "FileShares_Get",
        },
        Object {
          "operationId": "FileShares_Update",
        },
        Object {
          "operationId": "FileShares_Lease",
        },
        Object {
          "operationId": "FileShares_Restore",
          "variables": Object {
            "deletedShare": Object {
              "type": "object",
              "value": Object {
                "deletedShareName": "test",
                "deletedShareVersion": "test",
              },
            },
          },
        },
        Object {
          "operationId": "LocalUsers_CreateOrUpdate",
          "variables": Object {
            "properties": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "LocalUsers_List",
        },
        Object {
          "operationId": "LocalUsers_Get",
        },
        Object {
          "operationId": "LocalUsers_ListKeys",
        },
        Object {
          "operationId": "LocalUsers_RegeneratePassword",
        },
        Object {
          "operationId": "Table_Create",
        },
        Object {
          "operationId": "Table_List",
        },
        Object {
          "operationId": "Table_Get",
        },
        Object {
          "operationId": "Table_Update",
        },
        Object {
          "operationId": "Queue_Create",
        },
        Object {
          "operationId": "Queue_List",
        },
        Object {
          "operationId": "Queue_Get",
        },
        Object {
          "operationId": "Queue_Update",
        },
        Object {
          "operationId": "BlobContainers_CreateOrUpdateImmutabilityPolicy",
        },
        Object {
          "operationId": "BlobContainers_GetImmutabilityPolicy",
        },
        Object {
          "operationId": "EncryptionScopes_Put",
        },
        Object {
          "operationId": "EncryptionScopes_List",
        },
        Object {
          "operationId": "EncryptionScopes_Get",
        },
        Object {
          "operationId": "EncryptionScopes_Patch",
        },
        Object {
          "operationId": "PrivateEndpointConnections_Put",
          "variables": Object {
            "properties": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "PrivateEndpointConnections_List",
        },
        Object {
          "operationId": "PrivateEndpointConnections_Get",
        },
        Object {
          "operationId": "BlobInventoryPolicies_CreateOrUpdate",
          "variables": Object {
            "properties": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "BlobInventoryPolicies_List",
        },
        Object {
          "operationId": "BlobInventoryPolicies_Get",
        },
        Object {
          "operationId": "ObjectReplicationPolicies_CreateOrUpdate",
          "variables": Object {
            "properties": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "ObjectReplicationPolicies_List",
        },
        Object {
          "operationId": "ObjectReplicationPolicies_Get",
        },
        Object {
          "operationId": "ManagementPolicies_CreateOrUpdate",
          "variables": Object {
            "properties": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "ManagementPolicies_Get",
        },
        Object {
          "operationId": "TableServices_SetServiceProperties",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "TableServices_List",
        },
        Object {
          "operationId": "TableServices_GetServiceProperties",
        },
        Object {
          "operationId": "BlobServices_SetServiceProperties",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "BlobServices_List",
        },
        Object {
          "operationId": "BlobServices_GetServiceProperties",
        },
        Object {
          "operationId": "QueueServices_SetServiceProperties",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "QueueServices_List",
        },
        Object {
          "operationId": "QueueServices_GetServiceProperties",
        },
        Object {
          "operationId": "FileServices_SetServiceProperties",
          "variables": Object {
            "parameters": Object {
              "type": "object",
              "value": Object {},
            },
          },
        },
        Object {
          "operationId": "FileServices_List",
        },
        Object {
          "operationId": "FileServices_GetServiceProperties",
        },
        Object {
          "operationId": "Operations_List",
        },
        Object {
          "operationId": "DeletedAccounts_List",
        },
        Object {
          "operationId": "DeletedAccounts_Get",
          "variables": Object {
            "deletedAccountName": Object {
              "prefix": "deletedacc",
              "type": "string",
            },
            "test": Object {
              "type": "int",
              "value": 1,
            },
          },
        },
        Object {
          "operationId": "Usages_ListByLocation",
        },
        Object {
          "operationId": "Skus_List",
        },
        Object {
          "operationId": "PrivateLinkResources_ListByStorageAccount",
        },
        Object {
          "operationId": "ManagementPolicies_Delete",
        },
        Object {
          "operationId": "ObjectReplicationPolicies_Delete",
        },
        Object {
          "operationId": "BlobInventoryPolicies_Delete",
        },
        Object {
          "operationId": "PrivateEndpointConnections_Delete",
        },
        Object {
          "operationId": "BlobContainers_DeleteImmutabilityPolicy",
        },
        Object {
          "operationId": "Queue_Delete",
        },
        Object {
          "operationId": "Table_Delete",
        },
        Object {
          "operationId": "LocalUsers_Delete",
        },
        Object {
          "operationId": "FileShares_Delete",
        },
        Object {
          "operationId": "BlobContainers_Delete",
        },
        Object {
          "operationId": "StorageAccounts_Delete",
        },
      ],
    },
  ],
  "scope": "ResourceGroup",
  "variables": Object {
    "BlobServicesName": Object {
      "prefix": "blobservic",
      "type": "string",
    },
    "FileServicesName": Object {
      "prefix": "fileservic",
      "type": "string",
    },
    "If-Match": "test",
    "LegalHold": Object {
      "type": "object",
      "value": Object {
        "tags": Array [],
      },
    },
    "accountName": Object {
      "prefix": "accountnam",
      "type": "string",
    },
    "blobContainer": Object {
      "type": "object",
      "value": Object {},
    },
    "blobInventoryPolicyName": Object {
      "prefix": "blobinvent",
      "type": "string",
    },
    "containerName": Object {
      "prefix": "containern",
      "type": "string",
    },
    "encryptionScope": Object {
      "type": "object",
      "value": Object {},
    },
    "encryptionScopeName": Object {
      "prefix": "encryption",
      "type": "string",
    },
    "fileShare": Object {
      "type": "object",
      "value": Object {},
    },
    "immutabilityPolicyName": Object {
      "prefix": "immutabili",
      "type": "string",
    },
    "managementPolicyName": Object {
      "prefix": "management",
      "type": "string",
    },
    "objectReplicationPolicyId": Object {
      "prefix": "objectrepl",
      "type": "string",
    },
    "privateEndpointConnectionName": Object {
      "prefix": "privateend",
      "type": "string",
    },
    "queue": Object {
      "type": "object",
      "value": Object {},
    },
    "queueName": Object {
      "prefix": "queuename",
      "type": "string",
    },
    "queueServiceName": Object {
      "prefix": "queueservi",
      "type": "string",
    },
    "shareName": Object {
      "prefix": "sharename",
      "type": "string",
    },
    "tableName": Object {
      "prefix": "tablename",
      "type": "string",
    },
    "tableServiceName": Object {
      "prefix": "tableservi",
      "type": "string",
    },
    "username": Object {
      "prefix": "username",
      "type": "string",
    },
  },
}
`;

exports[`ApiScenarioGenerator generate api scenario from swagger and example - storage 1`] = `
Object {
  "scenarios": Array [
    Object {
      "scenario": "GeneratedScenario",
      "steps": Array [
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountCheckNameAvailability.json",
          "operationId": "StorageAccounts_CheckNameAvailability",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountCreate.json",
          "operationId": "StorageAccounts_Create",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountList.json",
          "operationId": "StorageAccounts_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListByResourceGroup.json",
          "operationId": "StorageAccounts_ListByResourceGroup",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountGetProperties.json",
          "operationId": "StorageAccounts_GetProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountUpdate.json",
          "operationId": "StorageAccounts_Update",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobRangesRestore.json",
          "operationId": "StorageAccounts_RestoreBlobRanges",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountRevokeUserDelegationKeys.json",
          "operationId": "StorageAccounts_RevokeUserDelegationKeys",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountAbortHierarchicalNamespaceMigration.json",
          "operationId": "StorageAccounts_AbortHierarchicalNamespaceMigration",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListServiceSAS.json",
          "operationId": "StorageAccounts_ListServiceSAS",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListKeys.json",
          "operationId": "StorageAccounts_ListKeys",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountRegenerateKey.json",
          "operationId": "StorageAccounts_RegenerateKey",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountFailover.json",
          "operationId": "StorageAccounts_Failover",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListAccountSAS.json",
          "operationId": "StorageAccounts_ListAccountSAS",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountHierarchicalNamespaceMigration.json",
          "operationId": "StorageAccounts_HierarchicalNamespaceMigration",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersPut.json",
          "operationId": "BlobContainers_Create",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersList.json",
          "operationId": "BlobContainers_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersGet.json",
          "operationId": "BlobContainers_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersPatch.json",
          "operationId": "BlobContainers_Update",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersLockImmutabilityPolicy.json",
          "operationId": "BlobContainers_LockImmutabilityPolicy",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/ObjectLevelWormContainerMigration.json",
          "operationId": "BlobContainers_ObjectLevelWorm",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersLease_Acquire.json",
          "operationId": "BlobContainers_Lease",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersClearLegalHold.json",
          "operationId": "BlobContainers_ClearLegalHold",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersExtendImmutabilityPolicy.json",
          "operationId": "BlobContainers_ExtendImmutabilityPolicy",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersSetLegalHold.json",
          "operationId": "BlobContainers_SetLegalHold",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileSharesPut.json",
          "operationId": "FileShares_Create",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileSharesList.json",
          "operationId": "FileShares_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileSharesGet.json",
          "operationId": "FileShares_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileSharesPatch.json",
          "operationId": "FileShares_Update",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileSharesLease_Acquire.json",
          "operationId": "FileShares_Lease",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileSharesRestore.json",
          "operationId": "FileShares_Restore",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/LocalUserCreate.json",
          "operationId": "LocalUsers_CreateOrUpdate",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/LocalUsersList.json",
          "operationId": "LocalUsers_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/LocalUserGet.json",
          "operationId": "LocalUsers_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/LocalUserListKeys.json",
          "operationId": "LocalUsers_ListKeys",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/LocalUserRegeneratePassword.json",
          "operationId": "LocalUsers_RegeneratePassword",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableOperationPut.json",
          "operationId": "Table_Create",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableOperationList.json",
          "operationId": "Table_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableOperationGet.json",
          "operationId": "Table_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableOperationPatch.json",
          "operationId": "Table_Update",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueOperationPut.json",
          "operationId": "Queue_Create",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueOperationList.json",
          "operationId": "Queue_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueOperationGet.json",
          "operationId": "Queue_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueOperationPatch.json",
          "operationId": "Queue_Update",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersPutImmutabilityPolicy.json",
          "operationId": "BlobContainers_CreateOrUpdateImmutabilityPolicy",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersGetImmutabilityPolicy.json",
          "operationId": "BlobContainers_GetImmutabilityPolicy",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountPutEncryptionScope.json",
          "operationId": "EncryptionScopes_Put",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountEncryptionScopeList.json",
          "operationId": "EncryptionScopes_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountGetEncryptionScope.json",
          "operationId": "EncryptionScopes_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountPatchEncryptionScope.json",
          "operationId": "EncryptionScopes_Patch",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountPutPrivateEndpointConnection.json",
          "operationId": "PrivateEndpointConnections_Put",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListPrivateEndpointConnections.json",
          "operationId": "PrivateEndpointConnections_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountGetPrivateEndpointConnection.json",
          "operationId": "PrivateEndpointConnections_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountSetBlobInventoryPolicy.json",
          "operationId": "BlobInventoryPolicies_CreateOrUpdate",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListBlobInventoryPolicy.json",
          "operationId": "BlobInventoryPolicies_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountGetBlobInventoryPolicy.json",
          "operationId": "BlobInventoryPolicies_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountCreateObjectReplicationPolicyOnDestination.json",
          "operationId": "ObjectReplicationPolicies_CreateOrUpdate",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListObjectReplicationPolicies.json",
          "operationId": "ObjectReplicationPolicies_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountGetObjectReplicationPolicy.json",
          "operationId": "ObjectReplicationPolicies_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountSetManagementPolicy.json",
          "operationId": "ManagementPolicies_CreateOrUpdate",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountGetManagementPolicy.json",
          "operationId": "ManagementPolicies_Get",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableServicesPut.json",
          "operationId": "TableServices_SetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableServicesList.json",
          "operationId": "TableServices_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableServicesGet.json",
          "operationId": "TableServices_GetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobServicesPut.json",
          "operationId": "BlobServices_SetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobServicesList.json",
          "operationId": "BlobServices_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobServicesGet.json",
          "operationId": "BlobServices_GetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueServicesPut.json",
          "operationId": "QueueServices_SetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueServicesList.json",
          "operationId": "QueueServices_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueServicesGet.json",
          "operationId": "QueueServices_GetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileServicesPut.json",
          "operationId": "FileServices_SetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileServicesList.json",
          "operationId": "FileServices_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileServicesGet.json",
          "operationId": "FileServices_GetServiceProperties",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/OperationsList.json",
          "operationId": "Operations_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/DeletedAccountList.json",
          "operationId": "DeletedAccounts_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/DeletedAccountGet.json",
          "operationId": "DeletedAccounts_Get",
          "variables": Object {
            "deletedAccountName": Object {
              "prefix": "deletedacc",
              "type": "string",
            },
          },
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListLocationUsage.json",
          "operationId": "Usages_ListByLocation",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/SKUList.json",
          "operationId": "Skus_List",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountListPrivateLinkResources.json",
          "operationId": "PrivateLinkResources_ListByStorageAccount",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountDeleteManagementPolicy.json",
          "operationId": "ManagementPolicies_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountDeleteObjectReplicationPolicy.json",
          "operationId": "ObjectReplicationPolicies_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountDeleteBlobInventoryPolicy.json",
          "operationId": "BlobInventoryPolicies_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountDeletePrivateEndpointConnection.json",
          "operationId": "PrivateEndpointConnections_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersDeleteImmutabilityPolicy.json",
          "operationId": "BlobContainers_DeleteImmutabilityPolicy",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/QueueOperationDelete.json",
          "operationId": "Queue_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/TableOperationDelete.json",
          "operationId": "Table_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/LocalUserDelete.json",
          "operationId": "LocalUsers_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/FileSharesDelete.json",
          "operationId": "FileShares_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/BlobContainersDelete.json",
          "operationId": "BlobContainers_Delete",
        },
        Object {
          "exampleFile": "test/apiScenario/fixtures/specification/storage/resource-manager/Microsoft.Storage/stable/2021-08-01/examples/StorageAccountDelete.json",
          "operationId": "StorageAccounts_Delete",
        },
      ],
    },
  ],
  "scope": "ResourceGroup",
  "variables": Object {
    "BlobServicesName": Object {
      "prefix": "blobservic",
      "type": "string",
    },
    "FileServicesName": Object {
      "prefix": "fileservic",
      "type": "string",
    },
    "accountName": Object {
      "prefix": "accountnam",
      "type": "string",
    },
    "blobInventoryPolicyName": Object {
      "prefix": "blobinvent",
      "type": "string",
    },
    "containerName": Object {
      "prefix": "containern",
      "type": "string",
    },
    "encryptionScopeName": Object {
      "prefix": "encryption",
      "type": "string",
    },
    "immutabilityPolicyName": Object {
      "prefix": "immutabili",
      "type": "string",
    },
    "managementPolicyName": Object {
      "prefix": "management",
      "type": "string",
    },
    "objectReplicationPolicyId": Object {
      "prefix": "objectrepl",
      "type": "string",
    },
    "privateEndpointConnectionName": Object {
      "prefix": "privateend",
      "type": "string",
    },
    "queueName": Object {
      "prefix": "queuename",
      "type": "string",
    },
    "queueServiceName": Object {
      "prefix": "queueservi",
      "type": "string",
    },
    "shareName": Object {
      "prefix": "sharename",
      "type": "string",
    },
    "tableName": Object {
      "prefix": "tablename",
      "type": "string",
    },
    "tableServiceName": Object {
      "prefix": "tableservi",
      "type": "string",
    },
    "username": Object {
      "prefix": "username",
      "type": "string",
    },
  },
}
`;
